@@ -1,3 +1,12 @@
+2018-11-13  Karl Berry  <karl@freefriends.org>
+
+	* texmfmp.c (FORCE_SOURCE_DATE_set, SOURCE_DATE_EPOCH_set): new static.
+	(init_start_time, get_date_and_time): initialize them.
+	(getfilemoddate): use_utc if both vars set.
+	Original suggestion from Ulrike Fischer, tex-live 3 Nov 2018 23:00:48,
+	original patch from Akira Kakuto.
+	(getfilemoddate): also, return nothing if ! kpse_in_name_ok.
+
 2018-11-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* openclose.c: cleanup for non-ascii file names (w32 only)
